# olist-data-platform

./: .coverage  .dockerignore  .env.example  .gitignore  .sqlfluff  DOCUMENTATION.md  Dockerfile  METABASE_GUIDE.md  POWERBI_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_pipeline.py  schema_registry.yml
.github/workflows/: cd.yml  ci.yml
dbt/: .user.yml
dbt/models/consumption/: view_delivery_analysis.sql  view_sales_dashboard.sql
dbt/models/marts/: dim_customer_ltv.sql  fct_delivery_performance.sql  fct_sales.sql  mart_kpis.sql  marts.yml
dbt/models/staging/: sources.yml  stg_customers.sql  stg_order_items.sql  stg_order_payments.sql  stg_orders.sql
dbt/tests/: orphaned_orders.sql
dbt_project/: .dbtignore  dbt_project.yml
dbt_project/models/consumption/: view_customer_segments.sql
dbt_project/models/marts/: mart_kpis.sql
dbt_project/models/staging/: schema.yml  stg_order_items.sql
dbt_project/tests/: delivery_before_purchase.sql  orphaned_payments.sql
infra/prometheus/: prometheus.yml
pipeline/: audit_setup.sql  event_bus.py  event_processor.py  ingestion.py  orchestration.py  orchestrator.py  quality.py  replay_engine.py  run_pipeline.py  run_pipeline_tasks.py  state_machine.py  utils.py
scripts/: ingestion.py  query_lake.py  utils.py
tests/: test_event_bus.py  test_event_processor.py  test_ingestion.py  test_main.py  test_orchestrator.py  test_quality.py  test_replay.py  test_state_machine.py  test_tasks.py  test_utils.py
