[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-data-platform"
version = "0.1.0"
description = "Production-grade Olist Data Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=3.0.1",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "dbt-postgres>=1.8.0",
    "python-dotenv>=1.0.1",
    "pyarrow>=15.0.0",
    "fastparquet>=2024.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]
